maybe fixed bug on wrapping long names

--- a/mysite/cooklog/static/css/cooklog.css
+++ b/mysite/cooklog/static/css/cooklog.css
@@ -193,7 +193,7 @@ a:visited {
 .dish-brief-inner {
     font-size: 13px;
     padding: 0 2px;
-    width: 800px;
+    width: 1200px;
     margin: 0px 0;
     float: left;
 }
@@ -210,6 +210,7 @@ a:visited {
     padding-top: 0px;
     font-size: 16px;
     width: 450px;
+    word-wrap: break-word;
 }
 
 .dish-brief-inner-name a {
